bug fixes, header removal, renaming

--- a/index.html
+++ b/index.html
@@ -19,192 +19,290 @@
     />
     <title>About me</title>
   </head>
-   <body>
-    <!--beginning of the design and layout section-------------------------------------------------->
-    <section class="page-design">
-      <!--container header-->
-      <header class="page-design__header">
-        <div class="page-design__header-wrapper">
-          <!--container logo-->
-          <div class="page-design__logo-container">
-            <img
-              class="page-design__logo-image"
-              src="/image/page_design/logoWD.png"
-              alt="logo"
-            />
-          </div>
-          <!--container menu with links------------------------------------------->
-          <nav class="page-design__links-container">
-            <a
-              href="#"
-              class="page-design__link-item page-design__link-item--active"
-              >ГЛАВНАЯ</a
-            >
-            <a href="#" class="page-design__link-item">ОБ АВТОРЕ</a>
-            <a href="#" class="page-design__link-item">РАБОТЫ</a>
-            <a href="#" class="page-design__link-item">ПРОЦЕСС</a>
-            <a href="#" class="page-design__link-item">КОНТАКТЫ</a>
-          </nav>
-        </div>
-      </header>
-      <!--wrapper main block with image title text button------------------------------>
-      <main class="page-design__contents-wrapper">
-        <!--container image-->
-        <div class="page-design__image-container">
+  <body>
+    <header class="page-header__header">
+      <div class="page-header__header-wrapper">
+        <!--container logo-->
+        <div class="page-header__logo-container">
           <img
-            src="/image/page_design/frameNoteBook.png"
+            class="page-header__logo-image"
+            src="./image/page_design/logoWD.png"
+            alt="logo"
+          />
+        </div>
+        <!--container menu with links------------------------------------------->
+        <nav class="page-header__links-container">
+          <a
+            href="#"
+            class="page-header__link-item page-design__link-item--active"
+            >ГЛАВНАЯ</a
+          >
+          <a href="#" class="page-header__link-item">ОБ АВТОРЕ</a>
+          <a href="#" class="page-header__link-item">РАБОТЫ</a>
+          <a href="#" class="page-header__link-item">ПРОЦЕСС</a>
+          <a href="#" class="page-header__link-item">КОНТАКТЫ</a>
+        </nav>
+      </div>
+    </header>
+    <!-------------------------------------------------------------------------------------------------->
+    <!--beginning of the design and layout section-------------------------------------------------->
+    <section class="design-section">
+      <!--wrapper main block with image title text button------------------------------>
+      <div class="design-section__contents-wrapper">
+        <!--container image-->
+        <div class="design-section__image-container">
+          <img
+            src="./image/page_design/frameNoteBook.png"
             alt="image"
-            class="page-design__image"
+            class="design-design__image"
           />
         </div>
         <!--container block with content and button--------------------------->
-        <div class="page-design__content-block">
+        <div class="design-section__content-block">
           <!--title h1-->
-          <h1 class="page-design__title">Дизайн и верстка</h1>
+          <h1 class="design-section__title">Дизайн и верстка</h1>
           <!--text------------------------------------------------------->
-          <p class="page-design__text">
+          <p class="design-section__text">
             Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br />
             вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов<br />
             на латинице с начала XVI века.
           </p>
           <!--button---------------------------------------------->
-          <button class="page-design__button" type="button">
+          <button class="design-section__button" type="button">
             НАПИСАТЬ МНЕ
           </button>
         </div>
-      </main>
+      </div>
     </section>
     <!--section about_me--------------------------------------------------------------->
 
     <!--section about_me--------------------------------------------------------------->
-    <section class="page-about">
+    <section class="about-section">
       <!--wrapper section about_me------------------------------------------>
-      <div class="page-about__wrapper">
+      <div class="about-section__wrapper">
         <!--container with title h2 and text------------------------------------>
-        <div class="page-about__text-container text-title-repeat">
-          <h2 class="page-about__title title-repeat ">Обо мне</h2>
-          <p class="page-about__text text-repeat">Lorem Ipsum - это текст-"рыба", 
-            часто используемый в 
-            печати и<br/> вэб-дизайне. Lorem Ipsum является стандартной 
-            "рыбой" для текстов<br/> на латинице с начала XVI века.
+        <div class="about-section__text-container text-title-repeat">
+          <h2 class="about-section__title title-repeat">Обо мне</h2>
+          <p class="about-section__text text-repeat">
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br />
+            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов<br />
+            на латинице с начала XVI века.
           </p>
         </div>
         <!--container with blue band and six images----------------------------------->
-        <div class="page-about__blue-band-container">
+        <div class="about-section__blue-band-container">
           <!--container for images--------------------------------->
-          <div class="page-about__image-container">
-            <img src="/image/page_about_me/item.png" alt="image" class="page-about__image">
-            <img src="/image/page_about_me/item.png" alt="image" class="page-about__image">
-            <img src="/image/page_about_me/item.png" alt="image" class="page-about__image">
-            <img src="/image/page_about_me/item.png" alt="image" class="page-about__image">
-            <img src="/image/page_about_me/item.png" alt="image" class="page-about__image">
-            <img src="/image/page_about_me/item.png" alt="image" class="page-about__image">
+          <div class="about-section__image-container">
+            <img
+              src="./image/page_about_me/item.png"
+              alt="image"
+              class="about-section__image"
+            />
+            <img
+              src="./image/page_about_me/item.png"
+              alt="image"
+              class="about-section__image"
+            />
+            <img
+              src="./image/page_about_me/item.png"
+              alt="image"
+              class="about-section__image"
+            />
+            <img
+              src="./image/page_about_me/item.png"
+              alt="image"
+              class="about-section__image"
+            />
+            <img
+              src="./image/page_about_me/item.png"
+              alt="image"
+              class="about-section__image"
+            />
+            <img
+              src="./image/page_about_me/item.png"
+              alt="image"
+              class="about-section__image"
+            />
           </div>
         </div>
         <!--container with my skills-------------------------------------------->
-        <main class="page-about__content-container">
-          <div class="page-about__skills-container">
+        <div class="about-section__content-container">
+          <div class="about-section__skills-container">
             <!--title my skills--------------------------------->
-            <h3 class="page-about__title">Мои навыки</h3>
+            <h3 class="about-section__title">Мои навыки</h3>
             <!--first block text and blue/grey line-->
-            <div class="page-about__line-container">
-              <p class="page-about__text">Adobe Photoshop</p>
-              <div class="page-about__blue-line"></div>
-              <div class="page-about__grey-line"></div>
+            <div class="about-section__line-container">
+              <p class="about-section__text">Adobe Photoshop</p>
+              <div class="about-section__blue-line"></div>
+              <div class="about-section__grey-line"></div>
             </div>
             <!--second block text and blue/grey line-->
-            <div class="page-about__line-container">
-              <p class="page-about__text">Adobe Photoshop</p>
-              <div class="page-about__blue-line"></div>
-              <div class="page-about__grey-line"></div>
+            <div class="about-section__line-container">
+              <p class="about-section__text">Adobe Photoshop</p>
+              <div class="about-section__blue-line"></div>
+              <div class="about-section__grey-line"></div>
             </div>
             <!--third block text and blue/grey line-->
-            <div class="page-about__line-container">
-              <p class="page-about__text">Adobe Photoshop</p>
-              <div class="page-about__blue-line"></div>
-              <div class="page-about__grey-line"></div>
+            <div class="about-section__line-container">
+              <p class="about-section__text">Adobe Photoshop</p>
+              <div class="about-section__blue-line"></div>
+              <div class="about-section__grey-line"></div>
             </div>
           </div>
-          <div class="page-about__photo-container">
-            <img src="/image/page_about_me/photoMan.png" 
-            class="page-about__photo" alt="photo">
+          <div class="about-section__photo-container">
+            <img
+              src="./image/page_about_me/photoMan.png"
+              class="about-section__photo"
+              alt="photo"
+            />
           </div>
-        </main>
+        </div>
       </div>
     </section>
     <!--section how i work=========================================================================-->
     <!--====================================================================================-->
-    <section class="page-work">
+    <section class="work-section">
       <!--container contents=======================================-->
-      <div class="page-work__container">
-        <div class="page-work__text-container text-title-repeat">
-          <h2 class="page-work__title title-repeat ">Как я работаю</h2>
-          <p class="page-work__text text-repeat">Lorem Ipsum - это текст-"рыба", 
-            часто используемый в 
-            печати и<br/> вэб-дизайне. Lorem Ipsum является стандартной 
-            "рыбой" для текстов<br/> на латинице с начала XVI века.
+      <div class="work-section__container">
+        <div class="work-section__text-container text-title-repeat">
+          <h2 class="work-section__title title-repeat">Как я работаю</h2>
+          <p class="work-section__text text-repeat">
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br />
+            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов<br />
+            на латинице с начала XVI века.
           </p>
         </div>
       </div>
-      <div class="page-work__images-container">
-        <img src="/image/page_how_i_work/buttonPlay.png" class="page-work__image-play" alt="button">
-        <img src="/image/page_how_i_work/pictWithCode.png" class="page-work__image-code" alt="work">
+      <div class="work-section__images-container">
+        <img
+          src="./image/page_how_i_work/buttonPlay.png"
+          class="work-section__image-play"
+          alt="button"
+        />
+        <img
+          src="./image/page_how_i_work/pictWithCode.png"
+          class="work-section__image-code"
+          alt="work"
+        />
       </div>
     </section>
     <!--section with photo=========================================================-->
     <!--====================================================================================-->
-    <section class="page-photo">
+    <section class="photo-section">
       <!--container 8 photo---------------------------------------------->
-      <div class="page-photo__container">
+      <div class="photo-section__container">
         <!-- first 1column--------------------------------------->
-        <div class="page-photo__column-images-1 ">
-          <img src="/image/page_with_photo/overlayEye.png" alt="logo" class="page-photo__logo">
-          <div class="page-photo__logo-bg1">
-            <img src="/image/page_with_photo/pictStickers.png" alt="photo" class="page-photo__photo">
-          </div>
-          
-        </div>
-        <!--second 2 clumn------------------------------------------>
-          <div class="page-photo__column-images-2">
-            <img src="/image/page_with_photo/overlayEye.png" alt="logo" class="page-photo__logo">
-            <div class="page-photo__logo-bg2">
-              <img src="/image/page_with_photo/pictNoteWithPeople.png" alt="photo" class="page-photo__photo">
-            </div>
-        </div>
-        <div class="page-photo__column-images-3 ">
-          <img src="/image/page_with_photo/overlayEye.png" alt="logo" class="page-photo__logo">
-          <div class="page-photo__logo-bg3">
-            <img src="/image/page_with_photo/pictStickers.png" alt="photo" class="page-photo__photo">
+        <div class="photo-section__column-images-1">
+          <img
+            src="./image/page_with_photo/overlayEye.png"
+            alt="logo"
+            class="photo-section__logo"
+          />
+          <div class="photo-section__logo-bg1">
+            <img
+              src="./image/page_with_photo/pictStickers.png"
+              alt="photo"
+              class="photo-section__photo"
+            />
           </div>
         </div>
-        <div class="page-photo__column-images-4 ">
-          <img src="/image/page_with_photo/overlayEye.png" alt="logo" class="page-photo__logo">
-          <div class="page-photo__logo-bg4">
-            <img src="/image/page_with_photo/pictNoteWithPeople.png" alt="photo" class="page-photo__photo">
+        <!-------------------------------------------->
+        <div class="photo-section__column-images-2">
+          <img
+            src="./image/page_with_photo/overlayEye.png"
+            alt="logo"
+            class="photo-section__logo"
+          />
+          <div class="photo-section__logo-bg2">
+            <img
+              src="./image/page_with_photo/pictNoteWithPeople.png"
+              alt="photo"
+              class="photo-section__photo"
+            />
           </div>
         </div>
-        <div class="page-photo__column-images-5 ">
-          <img src="/image/page_with_photo/overlayEye.png" alt="logo" class="page-photo__logo">
-          <div class="page-photo__logo-bg5">
-          <img src="/image/page_with_photo/pictNoteWithPeople.png" alt="photo" class="page-photo__photo">
+        <div class="photo-section__column-images-3">
+          <img
+            src="./image/page_with_photo/overlayEye.png"
+            alt="logo"
+            class="photo-section__logo"
+          />
+          <div class="photo-section__logo-bg3">
+            <img
+              src="./image/page_with_photo/pictStickers.png"
+              alt="photo"
+              class="photo-section__photo"
+            />
           </div>
         </div>
-        <div class="page-photo__column-images-6 ">
-          <img src="/image/page_with_photo/overlayEye.png" alt="logo" class="page-photo__logo">
-          <div class="page-photo__logo-bg6">
-          <img src="/image/page_with_photo/pictStickers.png" alt="photo" class="page-photo__photo">
+        <div class="photo-section__column-images-4">
+          <img
+            src="./image/page_with_photo/overlayEye.png"
+            alt="logo"
+            class="photo-section__logo"
+          />
+          <div class="photo-section__logo-bg4">
+            <img
+              src="./image/page_with_photo/pictNoteWithPeople.png"
+              alt="photo"
+              class="photo-section__photo"
+            />
           </div>
         </div>
-        <div class="page-photo__column-images-7 ">
-          <img src="/image/page_with_photo/overlayEye.png" alt="logo" class="page-photo__logo">
-          <div class="page-photo__logo-bg7">
-          <img src="/image/page_with_photo/pictNoteWithPeople.png" alt="photo" class="page-photo__photo">
+        <div class="photo-section__column-images-5">
+          <img
+            src="./image/page_with_photo/overlayEye.png"
+            alt="logo"
+            class="photo-section__logo"
+          />
+          <div class="photo-section__logo-bg5">
+            <img
+              src="./image/page_with_photo/pictNoteWithPeople.png"
+              alt="photo"
+              class="photo-section__photo"
+            />
           </div>
         </div>
-        <div class="page-photo__column-images-8 ">
-          <img src="/image/page_with_photo/overlayEye.png" alt="logo" class="page-photo__logo">
-          <div class="page-photo__logo-bg8">
-          <img src="/image/page_with_photo/pictStickers.png" alt="photo" class="page-photo__photo">
+        <div class="photo-section__column-images-6">
+          <img
+            src="./image/page_with_photo/overlayEye.png"
+            alt="logo"
+            class="photo-section__logo"
+          />
+          <div class="photo-section__logo-bg6">
+            <img
+              src="./image/page_with_photo/pictStickers.png"
+              alt="photo"
+              class="photo-section__photo"
+            />
+          </div>
+        </div>
+        <div class="photo-section__column-images-7">
+          <img
+            src="./image/page_with_photo/overlayEye.png"
+            alt="logo"
+            class="photo-section__logo"
+          />
+          <div class="photo-section__logo-bg7">
+            <img
+              src="./image/page_with_photo/pictNoteWithPeople.png"
+              alt="photo"
+              class="photo-section__photo"
+            />
+          </div>
+        </div>
+        <div class="photo-section__column-images-8">
+          <img
+            src="./image/page_with_photo/overlayEye.png"
+            alt="logo"
+            class="photo-section__logo"
+          />
+          <div class="photo-section__logo-bg8">
+            <img
+              src="./image/page_with_photo/pictStickers.png"
+              alt="photo"
+              class="photo-section__photo"
+            />
           </div>
         </div>
       </div>
