finished the desktop versiion

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="page-header__links-container">
           <a
             href="#"
-            class="page-header__link-item page-design__link-item--active"
+            class="page-header__link-item page-header__link-item--active"
             >ГЛАВНАЯ</a
           >
           <a href="#" class="page-header__link-item">ОБ АВТОРЕ</a>
@@ -68,7 +68,7 @@
             на латинице с начала XVI века.
           </p>
           <!--button---------------------------------------------->
-          <button class="design-section__button" type="button">
+          <button class="design-section__button button-repeat" type="button">
             НАПИСАТЬ МНЕ
           </button>
         </div>
@@ -187,127 +187,182 @@
       </div>
     </section>
     <!--section with photo=========================================================-->
+    <!--======================================================================================-->
+    <!--=
+        =
+        ==
+        ==
+              ==-->
     <!--====================================================================================-->
     <section class="photo-section">
       <!--container 8 photo---------------------------------------------->
       <div class="photo-section__container">
-        <!-- first 1column--------------------------------------->
-        <div class="photo-section__column-images-1">
+        <!-- first 1 picture--------------------------------------->
+        <div class="photo-section__column-images-1 photo-block">
+          <img
+            src="./image/page_with_photo/pictStickers.png"
+            alt="photo"
+            class="photo-section__photo"
+          />
           <img
             src="./image/page_with_photo/overlayEye.png"
             alt="logo"
             class="photo-section__logo"
           />
-          <div class="photo-section__logo-bg1">
-            <img
-              src="./image/page_with_photo/pictStickers.png"
-              alt="photo"
-              class="photo-section__photo"
-            />
-          </div>
         </div>
-        <!-------------------------------------------->
-        <div class="photo-section__column-images-2">
+        <div class="photo-section__column-images-2 photo-block">
+          <img
+            src="./image/page_with_photo/pictNoteWithPeople.png"
+            alt="photo"
+            class="photo-section__photo"
+          />
           <img
             src="./image/page_with_photo/overlayEye.png"
             alt="logo"
             class="photo-section__logo"
           />
-          <div class="photo-section__logo-bg2">
-            <img
-              src="./image/page_with_photo/pictNoteWithPeople.png"
-              alt="photo"
-              class="photo-section__photo"
-            />
-          </div>
         </div>
-        <div class="photo-section__column-images-3">
+        <div class="photo-section__column-images-3 photo-block">
+          <img
+            src="./image/page_with_photo/pictStickers.png"
+            alt="photo"
+            class="photo-section__photo"
+          />
           <img
             src="./image/page_with_photo/overlayEye.png"
             alt="logo"
             class="photo-section__logo"
           />
-          <div class="photo-section__logo-bg3">
-            <img
-              src="./image/page_with_photo/pictStickers.png"
-              alt="photo"
-              class="photo-section__photo"
-            />
-          </div>
         </div>
-        <div class="photo-section__column-images-4">
+        <div class="photo-section__column-images-4 photo-block">
+          <img
+            src="./image/page_with_photo/pictNoteWithPeople.png"
+            alt="photo"
+            class="photo-section__photo"
+          />
           <img
             src="./image/page_with_photo/overlayEye.png"
             alt="logo"
             class="photo-section__logo"
           />
-          <div class="photo-section__logo-bg4">
-            <img
-              src="./image/page_with_photo/pictNoteWithPeople.png"
-              alt="photo"
-              class="photo-section__photo"
-            />
-          </div>
         </div>
-        <div class="photo-section__column-images-5">
+        <div class="photo-section__column-images-5 photo-block">
+          <img
+            src="./image/page_with_photo/pictNoteWithPeople.png"
+            alt="photo"
+            class="photo-section__photo"
+          />
           <img
             src="./image/page_with_photo/overlayEye.png"
             alt="logo"
             class="photo-section__logo"
           />
-          <div class="photo-section__logo-bg5">
-            <img
-              src="./image/page_with_photo/pictNoteWithPeople.png"
-              alt="photo"
-              class="photo-section__photo"
-            />
-          </div>
         </div>
-        <div class="photo-section__column-images-6">
+        <div class="photo-section__column-images-6 photo-block">
+          <img
+            src="./image/page_with_photo/pictStickers.png"
+            alt="photo"
+            class="photo-section__photo"
+          />
           <img
             src="./image/page_with_photo/overlayEye.png"
             alt="logo"
             class="photo-section__logo"
           />
-          <div class="photo-section__logo-bg6">
-            <img
-              src="./image/page_with_photo/pictStickers.png"
-              alt="photo"
-              class="photo-section__photo"
-            />
-          </div>
         </div>
-        <div class="photo-section__column-images-7">
+        <div class="photo-section__column-images-7 photo-block">
+          <img
+            src="./image/page_with_photo/pictNoteWithPeople.png"
+            alt="photo"
+            class="photo-section__photo"
+          />
           <img
             src="./image/page_with_photo/overlayEye.png"
             alt="logo"
             class="photo-section__logo"
           />
-          <div class="photo-section__logo-bg7">
-            <img
-              src="./image/page_with_photo/pictNoteWithPeople.png"
-              alt="photo"
-              class="photo-section__photo"
-            />
-          </div>
         </div>
-        <div class="photo-section__column-images-8">
+        <div class="photo-section__column-images-8 photo-block">
+          <img
+            src="./image/page_with_photo/pictStickers.png"
+            alt="photo"
+            class="photo-section__photo"
+          />
           <img
             src="./image/page_with_photo/overlayEye.png"
             alt="logo"
             class="photo-section__logo"
           />
-          <div class="photo-section__logo-bg8">
-            <img
-              src="./image/page_with_photo/pictStickers.png"
-              alt="photo"
-              class="photo-section__photo"
-            />
-          </div>
         </div>
       </div>
     </section>
-    <script src="index.js"></script>
+    <!--section with title and form======================================-->
+    <section class="form-section">
+      <div class="form-section__wrapper">
+        <div class="form-section__container">
+          <div class="form-section__text-container text-title-repeat">
+            <h2 class="form-section__title title-repeat">Хотите веб-сайт?</h2>
+            <p class="form-section__text text-repeat">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br />
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+              текстов<br />
+              на латинице с начала XVI века.
+            </p>
+          </div>
+        </div>
+        <form class="form-section__form-container" action="#" method="post">
+          <div class="form-section__input-block">
+            <input
+              type="text"
+              placeholder="Ваше имя"
+              class="form-section__input-text input-repeat"
+            />
+            <input
+              type="email"
+              placeholder="Ваш e-mail"
+              class="form-section__input-email input-repeat"
+            />
+          </div>
+          <textarea type="text" class="form-section__input-textarea">
+            Сообщение
+            </textarea
+          >
+          <button
+            type="submit"
+            class="form-section__button-submit button-repeat"
+          >
+            Отправить
+          </button>
+        </form>
+      </div>
+    </section>
+    <!--footer===========================================================-->
+    <!--=======================================================================-->
+    <footer class="page-footer">
+      <div class="page-footer__container">
+        <div class="page-footer__text">
+          <span>Иванов Иван</span>
+          <span>(с) 2018. Все права защищены.</span>
+        </div>
+        <div class="page-footer__images">
+          <img
+            src="./image/footer/vectorVK.png"
+            alt=""
+            class="page-footer__image"
+          />
+          <img
+            src="./image/footer/vectorVK.png"
+            alt=""
+            class="page-footer__image"
+          />
+          <img
+            src="./image/footer/vectorVK.png"
+            alt=""
+            class="page-footer__image"
+          />
+        </div>
+      </div>
+    </footer>
     <script src="main .js"></script>
   </body>
 </html>
